# data-agents

./: .env.example  LICENSE  README.md  pyproject.toml
lead_agent/: cli.py  lead_agent.py  leads.db
sales_agent/: cli.py  sales_agent.py
sales_engineer_agent/: cli.py  sales_engineer_agent.py
scripts/: generate_dummy_lead_data.py
